<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="app_name">MySweetyPhone</string>
    <string name="keyboard_name">Удаленная клавиатура MySweetyPhone</string>
    <string name="passwordLOGIN">Пароль</string>
    <string name="nickLOGIN">Имя</string>
    <string name="log_inLOGIN">Войти</string>
    <string name="ErrorLoggingInLOGIN">Ошибка! Неверное имя или пароль</string>
    <string name="ErrorRegingLOGIN">Ошибка! Это имя уже используется</string>
    <string name="Exception">Ошибка приложения!</string>
    <string name="RegLOGIN">Зарегистрироваться</string>
    <string name="UniqueNameADDPHONE">Дайте этому устройству уникальное имя</string>
    <string name="DeviceNameADDPHONE">Имя устройства</string>
    <string name="Next">Далее</string>
    <string name="FillNameAndPassLOGIN">Имя и Пароль должны быть заполнены!</string>
    <string name="NameExistADDPHONE">Вы уже используете это имя!</string>
    <string name="FillNameADDPHONE">Вы должны указать имя!!</string>
    <string name="invalid_name">Имя содержит недопустимые символы!</string>
    <string name="titleDEVICESLIST">Список Устройств</string>
    <string name="PhoneNameADDPHONE">Вы должны указать имя устройства!</string>
    <string name="title_activity_devices_list">Список Устройств</string>
    <string name="exitNAV">Выход</string>
    <string name="deviceslistNAV">Устройства</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="savedNAV">Избранное</string>
    <string name="writeMessage">Введите сообщение</string>
    <string name="msgWillBeHereTextSAVED">Здесь будут видны ваши сохраненные файлы и сообщения</string>
    <string name="Refresh">Перезагрузить</string>
    <string name="send_to_savedCHOOSEWAY">Отправить в Избранное</string>
    <string name="choose_wayCHOOSEWAY">Выберите, что сделать с данными</string>
    <string name="open_siteCHOOSEWAY">Открыть на компьютере</string>
    <string name="copy_to_pcCHOOSEWAY">Отправить в буфер обмена компьютера</string>
    <string name="doCHOOSEWAY">Выполнить</string>
    <string name="title_activity_choose_way_to_send">MySweetyPhone</string>
    <string name="sclientNAV">Подключиться</string>
    <string name="sserverNAV">Новая Сессия</string>
    <string name="searchSCLIENT">Поиск...</string>
    <string name="stop_searchingSCLIENT">Остановить поиск</string>
    <string name="title_activity_mouse_tracker">MySweetyPhone</string>
    <string name="mouseMOUSETRACKER">Мышь</string>
    <string name="keyboardMOUSETRACKER">Клавиатура</string>
    <string name="pen_tabletMOUSETRACKER">Гр. Планшет</string>
    <string name="new_sessionSSERVER">Начать сессию</string>
    <string name="offline">Включить Offline Режим</string>
    <string name="ServerModeSSERVER">Автоматически открыть все сессии</string>
    <string name="load_moreSAVED">Загрузить ещё</string>
    <string name="nav_help">Помощь</string>
</resources>
