<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ChooseWayToSend">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_wayCHOOSEWAY"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/wayToSendCHOOSEWAY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp">

        <RadioButton
            android:id="@+id/sendToSavedCHOOSEWAY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/white"
            android:checked="true"
            android:padding="20dp"
            android:text="@string/send_to_savedCHOOSEWAY"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/openSiteCHOOSEWAY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/white"
            android:padding="20dp"
            android:text="@string/open_siteCHOOSEWAY"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/copyToPcCHOOSEWAY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/white"
            android:padding="20dp"
            android:text="@string/copy_to_pcCHOOSEWAY"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="14sp" />

    </RadioGroup>

    <Button
        android:id="@+id/doCHOOSEWAY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="Send"
        android:text="@string/doCHOOSEWAY"
        android:textSize="14sp" />

</LinearLayout>